// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`array.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare const array: readonly number[];
declare const tuple: readonly [number, number];

=====================================output=====================================
declare const array: readonly number[];
declare const tuple: readonly [number, number];

================================================================================
`;

exports[`readonly.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
  public readonly foo = 'string';
}

=====================================output=====================================
class Foo {
  public readonly foo = "string";
}

================================================================================
`;
